# ergo_client

./: Cargo.toml
ergo_client/: Cargo.toml
ergo_client/src/: lib.rs  main.rs  node.rs
ergo_client/src/node/endpoints/: wallet.rs
ergo_client/src/node/endpoints/wallet/: boxes.rs
ergo_client_macro/: Cargo.toml
src/: common.rs  lib.rs  main.rs  node.rs
src/node/: endpoints.rs  extensions.rs
src/node/endpoints/: root.rs  script.rs  transactions.rs  wallet.rs
src/node/endpoints/wallet/: boxes.rs  transaction.rs
