[package]
name = "ergo_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib" }
# this is purely for testing and experimenting, enables async main func in main.rs
tokio = { version = "1", features = ["full"] }

[features]
default = ["node", "blocking"]
node = []
blocking = ["reqwest/blocking"]
